# timezone_translator

./: Cargo.toml  Makefile  README.md  refactor.md
.github/: dependabot.yml
.github/workflows/: auto_merge__dependabot_pullrequest.yaml  dependabot__automerge.yaml  lint__csharp.yaml  lint__github_actions.yaml  lint__shell.yaml  rust.yml
crates/domain/: Cargo.toml  README.md
crates/domain/src/: ambiguous_time_strategy.rs  lib.rs  source_timezone.rs  target_timezone.rs  translation_request.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: get_system_timezone_from_env_var_tz.rs  get_system_timezone_from_etc_localtime.rs  lib.rs  local_timezone_string_provider.rs
crates/presentation/: Cargo.toml  README.md
crates/presentation/src/: command.rs  lib.rs
crates/presentation/src/command/: command_definition.rs  receiver.rs  validated_options.rs
crates/presentation/src/command/arguments/: from.rs  from_timezone.rs  to.rs
crates/presentation/src/command/validated_options/: validated_user_inputs.rs
crates/presentation/src/validator/: ambiguous_time_strategy_validator.rs  command_options_validator.rs  validation_error.rs
crates/presentation/src/validator/regex_matcher/: ymd_t_hms_matcher.rs
crates/usecase/: Cargo.toml  README.md
crates/usecase/src/: lib.rs  translation_error.rs
src/: command.rs  converter.rs  domain.rs  factory.rs  infrastructure.rs  main.rs  presentation.rs  translator.rs  usecase.rs  validator.rs
src/command/: arguments.rs  command_definition.rs  current_local_timezone_provider.rs  helper.rs  options.rs  receiver.rs  validated_options.rs
src/command/arguments/: ambiguous_time_strategy.rs  from.rs  time.rs  to.rs
src/command/current_local_timezone_provider/: get_system_timezone_from_env_var_tz.rs  get_system_timezone_from_etc_localtime.rs  get_system_timezone_from_etc_timezone.rs  local_timezone_string_provider.rs
src/command/helper/: local_timezone_string_provider.rs
src/command/validated_options/: validated_user_inputs.rs
src/domain/: README.md  conversion_time.rs  source_timezone.rs  target_timezone.rs  timezone_parse_error.rs  translation_request.rs
src/factory/: command_factory.rs  local_datetime.rs  local_datetime_string.rs  local_timezone_string_provider.rs
src/infrastructure/: README.md  current_local_timezone_provider.rs  local_timezone_string_provider.rs  system_timezone_sources.rs
src/infrastructure/current_local_timezone_provider/: get_system_timezone_from_env_var_tz.rs  get_system_timezone_from_etc_localtime.rs  get_system_timezone_from_etc_timezone.rs  local_timezone_string_provider.rs
src/presentation/: validator.rs
src/presentation/command/: arguments.rs  command_definition.rs
src/presentation/command/arguments/: to_timezone.rs
src/presentation/validator/: command_options_validator.rs  validation_error.rs
src/translator/: translation_error.rs  translator.rs
src/usecase/: README.md
src/validator/: ambiguous_time_strategy.rs  ambiguous_time_strategy_validator.rs  command_options_validator.rs  native_datetime_validator.rs  regex_matcher.rs  timezone_validator.rs  validated_command_options.rs  validation_error.rs  validator.rs
src/validator/regex_matcher/: ymd_hms_matcher.rs  ymd_matcher.rs  ymd_t_hms_matcher.rs
tests/: cli.rs
