[package]
name = "tzt"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "simple command-line utility that converts a given time from one timezone to another."
homepage = "https://github.com/shunsock/timezone_translator"
repository = "https://github.com/shunsock/timezone_translator"
documentation = "https://github.com/shunsock/timezone_translator/blob/main/README.md"
readme = "README.md"
keywords = ["timezone", "time", "converter", "translator", "cli"]
categories = ["command-line-utilities"]

[dependencies]
assert_cmd = "2.0"
chrono = "0.4"
chrono-tz = "0.10"
clap = "4.5"
predicates = "3.0"
regex = "1.11.1"
thiserror = "1.0.64"
