[package]
name = "tzt"
version = "0.3.1"
edition = "2021"
license = "MIT"
description = "simple command-line utility that converts a given time from one timezone to another."
homepage = "https://github.com/shunsock/timezone_translator"
repository = "https://github.com/shunsock/timezone_translator"
documentation = "https://github.com/shunsock/timezone_translator/blob/main/README.md"
readme = "README.md"
keywords = ["timezone", "time", "converter", "translator", "cli"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4"
chrono-tz = "0.10"
# feature "string": lets Arg::default_value take an owned String, so the
# runtime-detected local timezone needs no Box::leak / &'static str hack
clap = { version = "4.5", features = ["string"] }
regex = "1.12.2"
thiserror = "2.0.18"

[dev-dependencies]
assert_cmd = "2.1"
predicates = "3.1"
